--- a/CDR.html
+++ b/CDR.html
@@ -87,7 +87,7 @@
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>  Nguyễn Thị Như Huỳnh</td>
+                        <td>  Bùi Thị Như Huỳnh</td>
                     </tr>
                     <tr>
                         <td>5</td>
@@ -103,7 +103,7 @@
                     <option>Nguyễn Thái Tín</option>
                     <option>Nguyễn Thái Tâm</option>
                     <option>Nguyễn Minh Thức</option>
-                    <option>Nguyễn Thị Như Huỳnh</option>
+                    <option>Bùi Thị Như Huỳnh</option>
                     <option>Nguyễn Trọng Phúc</option>
                     <option>Nguyễn Cát Tường</option>
                 </select>
@@ -240,7 +240,7 @@
                       cell1 = row.insertCell(0);
                       cell2 = row.insertCell(1);
                       cell1.innerHTML = "Họ tên";
-                      cell2.innerHTML = "Nguyễn Thị Như Huỳnh";
+                      cell2.innerHTML = "Bùi Thị Như Huỳnh";
                     }else if (idx == 4){
                         document.getElementById("img1").src="Phuc.png"
                         var table = document.getElementById("myTable");
